local下のファイルを何でも読みにいける設定 + index.html.erbの翻訳を追加

--- a/config/locales/defaults/ja.yml
+++ b/config/locales/defaults/ja.yml
@@ -120,6 +120,12 @@ ja:
       create: 登録する
       submit: 保存する
       update: 更新する
+    links:
+      new: 新規登録
+      show: 詳細
+      edit: 編集
+      destroy: 削除
+      back: 戻る
   number:
     currency:
       format:
