--- a/config/locales/models/book/ja.yml
+++ b/config/locales/models/book/ja.yml
@@ -9,3 +9,8 @@ ja:
         memo: メモ
         picture: 写真
         title: タイトル
+
+    flash:
+      create: 本が登録されました
+      update: 本が更新されました
+      destroy: 本が削除されました
