--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -215,6 +215,11 @@ ja:
       delete_confirm: よろしいですか？
       title_new: "%{name}の新規作成"
       title_edit: "%{name}の編集"
+      kaminari:
+        next: 次へ
+        previous: 前へ
+        first: 最初へ
+        last: 最後へ
   controllers:
     common:
       notice_create: "%{name}が作成されました。"
