%{name}でtメソッドで値を渡せるように変更 + 削除確認ダイアログの翻訳を追加

--- a/config/locales/defaults/en.yml
+++ b/config/locales/defaults/en.yml
@@ -145,6 +145,8 @@ en:
       header:
         one: "%{count} error prohibited this %{model} from being saved"
         other: "%{count} errors prohibited this %{model} from being saved"
+  confirm:
+    destroy: Are you sure?
   helpers:
     select:
       prompt: Please select
