日本語翻訳ファイルで漏れていたモデル名の埋め込み変数を追加

--- a/config/locales/models/book/ja.yml
+++ b/config/locales/models/book/ja.yml
@@ -12,6 +12,6 @@ ja:
 
   flash:
     book:
-      create: 本が登録されました
-      update: 本が更新されました
-      destroy: 本が削除されました
+      create: "%{name}が登録されました"
+      update: "%{name}が更新されました"
+      destroy: "%{name}が削除されました"
