--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -129,6 +129,7 @@ ja:
         didn_t_receive_unlock_instructions: アカウントのロック解除方法のメールを受け取っていませんか？
         forgot_your_password: パスワードを忘れましたか？
         sign_in: ログイン
+        sign_out: ログアウト
         sign_in_with_provider: "%{provider}でログイン"
         sign_up: アカウント登録
       minimum_password_length: "（%{count}字以上）"
