--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -217,7 +217,7 @@ ja:
       title_edit: "%{name}の編集"
     layouts:
       users:
-        index: ユーザー一覧
+        index: ユーザーの一覧
         show: マイページ
       books:
         index: 本一覧
