不要なbootstrapの読み込みの削除 + ファイルの並びの整形 + i18nの翻訳を微調整

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -217,10 +217,10 @@ ja:
       title_edit: "%{name}の編集"
     layouts:
       users:
-        index: ユーザーの一覧
+        index: ユーザー 一覧
         show: マイページ
       books:
-        index: 本一覧
+        index: 本 一覧
     pagination:
       first: '最初'
       last: '最後'
