ユーザーをフォロー&アンフォローした際のflashメッセージを変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -239,6 +239,9 @@ ja:
       notice_create: "%{name}が作成されました。"
       notice_update: "%{name}が更新されました。"
       notice_destroy: "%{name}が削除されました。"
+    follow:
+      notice_create: "ユーザーをフォローしました。"
+      notice_destroy: "ユーザーをアンフォローしました。"
   layouts:
     application:
       menu: メニュー
