locales/ja.ymlの「views.layouts.users.show」の値を変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -218,7 +218,7 @@ ja:
     layouts:
       users:
         index: ユーザー 一覧
-        show: マイページ
+        show: ユーザー詳細
       books:
         index: 本 一覧
     pagination:
