Comment関連の翻訳を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -245,6 +245,10 @@ ja:
       notice_create: "%{name}が作成されました。"
       notice_update: "%{name}が更新されました。"
       notice_destroy: "%{name}が削除されました。"
+  comments:
+    form:
+      create: コメントする
+      no_comments: コメントはまだありません
   relationships:
     create:
       notice: "フォローしました。"
