--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -4,6 +4,7 @@ ja:
       book: 本  #g
       user: ユーザ
       comment: コメント
+      report: 日報
 
     attributes:
       book:
@@ -11,6 +12,12 @@ ja:
         memo: メモ  #g
         picture: 画像  #g
         title: 題名  #g
+      report:
+        title: タイトル
+        content: 内容
+      comment:
+        content: コメント内容
+        created_at: 作成日時
       user:
         name: 氏名
         postal_code: 郵便番号
