コメントの送信ボタンの名前を変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -247,7 +247,7 @@ ja:
       notice_destroy: "%{name}が削除されました。"
   comments:
     form:
-      create: コメントする
+      submit: 送信
       no_comments: コメントはまだありません
   relationships:
     create:
